--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "heroku-client": "^2.4.1",
     "node-github": "0.0.3",
     "request": "2.25.0",
-    "underscore": "1.5.1"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "mocha": "*",
