--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "author": "Benjie Gillam <benjie@jemjie.com>",
   "description": "A simple helpful robot for your Company",
+  "scripts": {
+    "start": ". ./.env; bin/hubot -a slack"
+  },
   "dependencies": {
+    "heroku-client": "^2.4.1",
     "hubot": "^2.18.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.6",
@@ -17,7 +21,8 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^3.4.2"
+    "hubot-slack": "^3.4.2",
+    "lodash": "^4.6.1"
   },
   "engines": {
     "node": "0.10.x"
