--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "twit": "2.2.3"
   },
   "engines": {
     "node": "0.10.x"
